objects/Descriptive_record_header__c.object
<CustomObject>
    <fields>
        <fullName>Date_to_be_processed__c</fullName>
        <label>Date to be processed</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_entries__c</fullName>
        <label>Description of entries</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_User_Supplying_File__c</fullName>
        <label>Name of User Supplying File</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_User_s_Financial_Institution__c</fullName>
        <label>Name of User&apos;s Financial Institution</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_User_Supplying_File__c</fullName>
        <label>Number of User Supplying File</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reel_Sequence_Number__c</fullName>
        <label>Reel Sequence Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank2__c</fullName>
        <label>blank2</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank3__c</fullName>
        <label>blank3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank__c</fullName>
        <label>blank</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <label>Descriptive record header</label>
    <nameField>
        <label>Descriptive record header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descriptive record headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>